<resources>
    <string name="app_name">Bloodhound</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>





    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="default_trigger">EnableBloodhound</string>
    <string name="permission_enabled">Enabled</string>
    <string name="ignore_battery">Ignore Battery Optimizations</string>
    <string name="do_not_disturb">Do not disturb access</string>
    <string name="draw_over">Draw over other apps</string>
    <string name="default_permissions">Default Permissions</string>
    <string name="start_emergency">Start basic tracking</string>
    <string name="start_emergency_full">Start full tracking</string>
    <string name="need_phone_number">Must set phone number to message first.</string>
    <string name="emergency_stop">Emergency tracking has stopped.</string>
    <string name="emergency_start">Emergency tracking has started. Press to stop.</string>
    <string name="emergency_full">Emergency full tracking has started. Press to stop.</string>


    <string name="settings">Settings</string>
    <string name="enable_permissions">Enable Permissions</string>
    <string name="view_history">View History</string>
    <string name="nextcloud">Nextcloud</string>
    <string name="remove_account">Remove Nextcloud Account</string>
    <string name="title_activity_nextcloud_account">Sign in to Nextcloud</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="title_activity_bloodhound">BloodhoundActivity</string>
</resources>
